--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "npm run development"
   },
   "author": "Filip Banasiak",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/filipior/FLOEMA.git"
+  },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^8.1.1",
