--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "glslify-loader": "^2.0.0",
+    "image-minimizer-webpack-plugin": "^3.3.0",
+    "imagemin-optipng": "^8.0.0",
     "mini-css-extract-plugin": "^1.6.2",
     "postcss-loader": "^7.0.1",
     "sass": "^1.54.5",
