--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "file-loader": "^6.2.0",
     "glslify-loader": "^2.0.0",
     "image-minimizer-webpack-plugin": "^3.3.0",
+    "imagemin": "^8.0.1",
     "imagemin-optipng": "^8.0.0",
     "mini-css-extract-plugin": "^1.6.2",
     "postcss-loader": "^7.0.1",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
+    "terser-webpack-plugin": "^5.3.5",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.10.0",
