--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.10.0",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "eslint-plugin-n": "^15.2.4"
   }
 }
