--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress --config webpack.config.build.js",
-    "development": "webpack serve --progress --config webpack.config.development.js",
+    "backend:build": "node app.js",
+    "backend:development": "nodemon app.js",
+    "frontend:build": "webpack --progress --config webpack.config.build.js",
+    "frontend:development": "webpack serve --progress --config webpack.config.development.js",
     "start": "npm run development"
   },
   "author": "Filip Banasiak",
@@ -40,6 +42,8 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "eslint-plugin-n": "^15.2.4"
+    "eslint-plugin-n": "^15.2.4",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19"
   }
 }
