--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "backend:development": "nodemon app.js",
     "frontend:build": "webpack --progress --config webpack.config.build.js",
     "frontend:development": "webpack serve --progress --config webpack.config.development.js",
-    "start": "npm run development"
+    "start": "concurrently --kill-others \"npm run backend:development\" \"npm run frontend:development\""
   },
   "author": "Filip Banasiak",
   "repository": {
@@ -44,6 +44,7 @@
   "dependencies": {
     "eslint-plugin-n": "^15.2.4",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "pug": "^3.0.2"
   }
 }
