--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@prismicio/client": "^6.6.4",
+    "dotenv": "^16.0.1",
     "eslint-plugin-n": "^15.2.4",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
+    "prismic-dom": "^2.2.7",
     "pug": "^3.0.2"
   }
 }
