--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
   },
   "dependencies": {
     "@prismicio/client": "^6.6.4",
+    "@prismicio/helpers": "^2.3.3",
     "dotenv": "^16.0.1",
     "eslint-plugin-n": "^15.2.4",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
-    "prismic-dom": "^2.2.7",
     "pug": "^3.0.2"
   }
 }
