--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "babel-loader": "^8.2.5",
+    "body-parser": "^1.20.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^6.7.1",
+    "errorhandler": "^1.5.1",
     "eslint": "^8.22.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-loader": "^4.0.2",
@@ -31,12 +33,15 @@
     "image-minimizer-webpack-plugin": "^3.3.0",
     "imagemin": "^8.0.1",
     "imagemin-optipng": "^8.0.0",
+    "method-override": "^3.0.0",
     "mini-css-extract-plugin": "^1.6.2",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "postcss-loader": "^7.0.1",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "terser-webpack-plugin": "^5.3.5",
+    "ua-parser-js": "^1.0.2",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.10.0",
